--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "meshline": "^3.3.1",
     "moment": "^2.30.1",
     "motion": "^12.29.2",
-    "next": "^16.0.8",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "npm": "^11.6.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
